# investpilot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_20260608.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: ir_domains.py  settings.py  step_contracts.json  ticker_rules.py
docs/: architecture.md  architecture_rewrite_plan.md
mcp_servers/: tushare_proxy.py
prompts/: 00_quick_triage.md  01_business_analysis.md  02_competitive_moat.md  03_marginal_changes.md  04_assumption_research.md  04_quantitative_model.md  05_financial_model.md  05_rrr_strategy.md  06_auditing.md  06_monte_carlo_simulation.md  07_research_director_review.md  07_rrr_strategy.md  08_auditing.md  09_research_director_review.md
src/: cli.py  cli_post_research.py  storage.py
src/analysis/: _base.py  _utils.py  bank_excel_model.py  bank_financial_model.py  catalyst_tracker.py  comps.py  consensus_tracker.py  edge_scorer.py  excel_model.py  (+13 more)
tests/: conftest.py  test_cache.py  test_catalyst_tracker.py  test_cli.py  test_consensus_tracker.py  test_data_fetchers.py  test_data_fetchers_mocked.py  test_edge_scorer.py  test_evidence_registry.py  test_excel_model.py  test_financial.py  test_financial_model.py  test_knowledge_graph.py  test_material_tracker.py  test_monte_carlo.py  test_report_generator.py  test_research_workflow.py  test_settings.py  test_state_modules.py  test_step4_validate.py  test_step_contracts.py  test_technical.py  test_thesis_tracker.py  test_tushare_fetcher_limits.py  test_tushare_normalizer.py  test_valuation.py  test_web_app.py
web/: app.py  index.html  package-lock.json  package.json
(+44 files in other folders)
