[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "investpilot"
version = "0.1.0"
description = "Deep fundamental investment research harness powered by Claude Code"
requires-python = ">=3.9"
dependencies = [
    "tushare>=1.4",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
investpilot = "src.cli:main"
